--- a/reset.css
+++ b/reset.css
@@ -13,8 +13,9 @@
 }
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
+
 body {
   /* line-height: 1.5; */
   -webkit-font-smoothing: antialiased;
