--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,24 @@
 /* Generic styles  */
 
-body {
-  display: flex;
-  flex-direction: column;
-  max-width: 640px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
 a {
   text-decoration: none;
 }
 
 p a {
   text-decoration: underline;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  transition: background-color 400ms ease;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 640px;
+  margin: 0 auto;
 }
 
 .top-main-container {
@@ -107,11 +110,46 @@ h6 {
   background-color: #85e858;
 }
 
+.background-effect {
+  position: relative;
+  background: radial-gradient(rgba(255, 255, 255, 0.2) 8%, transparent 8%), #000;
+  background-size: 1.5rem 1.5rem;
+  background-position: 0% 0%;
+  transition: background-position 400ms ease;
+}
+
+html:hover .background-effect {
+  background-position: -3% -3%;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.over-overlay {
+  position: relative;
+  z-index: 2;
+}
+
+.disable-scroll {
+  cursor: pointer;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 /* Index.html specific styles */
 .skills-list {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+  padding-left: 0;
 }
 
 .skills-list > * {
