--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ p a {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  transition: background-color 400ms ease;
 }
 
 .content {
@@ -115,7 +114,6 @@ h6 {
   background: radial-gradient(rgba(255, 255, 255, 0.2) 8%, transparent 8%), #000;
   background-size: 1.5rem 1.5rem;
   background-position: 0% 0%;
-  transition: background-position 400ms ease;
 }
 
 html:hover .background-effect {
@@ -130,6 +128,7 @@ html:hover .background-effect {
   left: 0;
   z-index: 1;
   pointer-events: none;
+  transition: background-color 400ms ease, background-position 400ms ease;
 }
 
 .over-overlay {
