--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 /* Generic styles  */
-
 a {
   text-decoration: none;
 }
@@ -11,18 +10,22 @@ p a {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --color-1: #ffff00;
+  --color-2: #85e858;
+  --color-3: #00c584;
+  --color-4: #009c95;
+  --color-5: #007184;
+  --color-6: #2f4858;
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  max-width: 640px;
+  max-width: 40rem;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .top-main-container {
   padding-top: 2rem;
-  flex: 1 0 100%;
 }
 
 .top-container {
@@ -33,7 +36,7 @@ body {
 
 header > a {
   font-family: "Courier New", Courier, monospace;
-  letter-spacing: -2px;
+  letter-spacing: -3px;
   font-size: 2rem;
 }
 
@@ -101,12 +104,16 @@ h6 {
 
 /* Utility classes */
 
-.bg-yellow {
-  background-color: #ffff00;
+.bg-color-1 {
+  background-color: var(--color-1);
 }
 
-.bg-green {
-  background-color: #85e858;
+.bg-color-2 {
+  background-color: var(--color-2);
+}
+
+.color-white {
+  color: #fff;
 }
 
 .background-effect {
