--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ p a {
   text-decoration: underline;
 }
 
+img {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -98,6 +103,10 @@ h6 {
 }
 
 /* Utility classes */
+
+.img-small {
+  width: 30%;
+}
 
 .bg-color-1 {
   background-color: var(--color-1);
