--- a/styles.css
+++ b/styles.css
@@ -102,10 +102,15 @@ h6 {
   margin-bottom: 0.3rem;
 }
 
-/* Utility classes */
-
 .img-small {
-  width: 30%;
+  width: 100%;
+}
+
+/* Utility classes */
+@media screen and (min-width: 640px) {
+  .img-small {
+    width: 30%;
+  }
 }
 
 .bg-color-1 {
