--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ body {
   --color-4: #009c95;
   --color-5: #007184;
   --color-6: #2f4858;
+
+  background: #ecedf1;
 }
 
 .content {
@@ -77,7 +79,7 @@ footer ul {
   margin: 0;
 }
 
-h1 {
+/* h1 {
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
@@ -100,7 +102,7 @@ h5 {
 h6 {
   margin-top: 0.6rem;
   margin-bottom: 0.3rem;
-}
+} */
 
 .img-small {
   width: 100%;
@@ -127,6 +129,10 @@ h6 {
 
 article {
   margin-bottom: 5rem;
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+  background: #ecedf1;
+  filter: drop-shadow(-7px -7px 7px #f9faff) drop-shadow(7px 7px 7px #a6abbd);
 }
 
 .background {
