--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 /* Generic styles  */
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --color-1: #ffff00;
+  --color-2: #85e858;
+  --color-3: #00c584;
+  --color-4: #009c95;
+  --color-5: #007184;
+  --color-6: #2f4858;
+
+  background: #ecedf1;
+}
+
 a {
   text-decoration: none;
 }
@@ -12,17 +25,14 @@ img {
   margin-bottom: 2rem;
 }
 
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  --color-1: #ffff00;
-  --color-2: #85e858;
-  --color-3: #00c584;
-  --color-4: #009c95;
-  --color-5: #007184;
-  --color-6: #2f4858;
+.img-small {
+  width: 100%;
+}
 
-  background: #ecedf1;
+@media screen and (min-width: 640px) {
+  .img-small {
+    width: 40%;
+  }
 }
 
 .content {
@@ -64,6 +74,13 @@ nav > ul > li {
   padding: 0 0.3rem;
 }
 
+article {
+  margin-bottom: 5rem;
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+  background: #ecedf1;
+}
+
 footer {
   padding: 3rem 0 1rem 0;
   display: flex;
@@ -79,60 +96,16 @@ footer ul {
   margin: 0;
 }
 
-/* h1 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-}
-h2 {
-  margin-top: 1.6rem;
-  margin-bottom: 0.8rem;
-}
-h3 {
-  margin-top: 1.2rem;
-  margin-bottom: 0.6rem;
-}
-h4 {
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
-}
-h5 {
-  margin-top: 0.8rem;
-  margin-bottom: 0.4rem;
-}
-h6 {
-  margin-top: 0.6rem;
-  margin-bottom: 0.3rem;
-} */
-
-.img-small {
-  width: 100%;
+.bg-col-yellow {
+  background-color: #ffff00;
 }
 
-/* Utility classes */
-@media screen and (min-width: 640px) {
-  .img-small {
-    width: 40%;
-  }
+.bg-col-green {
+  background-color: #85e858;
 }
 
-.bg-color-1 {
-  background-color: var(--color-1);
-}
-
-.bg-color-2 {
-  background-color: var(--color-2);
-}
-
-.color-white {
+.col-white {
   color: #fff;
-}
-
-article {
-  margin-bottom: 5rem;
-  padding: 1rem 1rem;
-  border-radius: 1rem;
-  background: #ecedf1;
-  filter: drop-shadow(-7px -7px 7px #f9faff) drop-shadow(7px 7px 7px #a6abbd);
 }
 
 .background {
@@ -151,14 +124,12 @@ body:hover .background {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
   pointer-events: none;
   transition: background-color 400ms ease, background-position 400ms ease;
 }
 
 .over-overlay {
   position: relative;
-  z-index: 2;
 }
 
 .disable-scroll {
